start work for mainslider

--- a/src/home.html
+++ b/src/home.html
@@ -6,9 +6,37 @@
 	<body>
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
-			<main class="page">
-				<div class="page__container">
-				</div>
+			<main class="mainpage">
+				<section class="mainpage__slider main-slider">
+					<div class="main-slider__container main-slider__container_wide">
+						<div class="main-slider__container body-main-slider">
+							<div class="body-main-slider__slider swiper">
+								<div class="body-main-slider__wrapper swiper-wrapper">
+
+									<div class="body-main-slider__slide swiper-slide slide-main-slider">
+										<div class="slide-main-slider__content">
+											<div class="slide-main-slider__header block-header">
+												<div class="block-header__sub-title">Chase the new Flavour</div>
+												<h2 class="block-header__title">The key to Fine dining</h2>
+											</div>
+											<div class="slide-main-slider__text">Sit tellus lobortis sed senectus vivamus molestie. Condimentum volutpat morbi facilisis quam scelerisque sapien. Et, penatibus aliquam amet tellus </div>
+											<a href="" class="slide-main-slider__button">Explore Menu</a>
+										</div>
+										<div class="slide-main-slider__img">
+											<img src="@img/home/main-slider/01.jpg" alt="Photo">
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+						<nav class="main-slider__menu menu-main-slider">
+							<a href="" class="menu-main-slider__link">#Bar</a>
+							<a href="" class="menu-main-slider__link">#Gericht</a>
+						</nav>
+						<div class="main-slider__scroll">main-slider</div>
+					</div>
+				</section>
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
