--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -9,8 +9,6 @@
 					<ul class="menu__list">
 						<li class="menu__item"><a href="" class="menu__link">Home</a></li>
 						<li class="menu__item"><a href="" class="menu__link">Pages</a></li>
-						<li class="menu__item"><a href="" class="menu__link">Pages</a></li>
-						<li class="menu__item"><a href="" class="menu__link">Pages</a></li>
 						<li class="menu__item"><a href="" class="menu__link">Contact Us</a></li>
 						<li class="menu__item"><a href="" class="menu__link">Blog</a></li>
 						<li class="menu__item"><a href="" class="menu__link">Landing</a></li>
@@ -18,8 +16,8 @@
 				</nav>
 			</div>
 		</div>
-		<div class="header__column header__column_auth header__column_side">
-			<div data-da=".menu__body,500" class="header__auth auth-header">
+		<div data-da=".menu__body,500" class="header__column header__column_auth header__column_side">
+			<div class="header__auth auth-header">
 				<ul class="auth-header__list">
 					<li class="auth-header__item">
 						<a href="" class="auth-header__link">Log in / registration</a>
