--- a/src/home.html
+++ b/src/home.html
@@ -15,12 +15,12 @@
 
 									<div class="body-main-slider__slide swiper-slide slide-main-slider">
 										<div class="slide-main-slider__content">
-											<div class="slide-main-slider__header block-header">
+											<div class="slide-main-slider__header block-header block-header_big block-header_left">
 												<div class="block-header__sub-title">Chase the new Flavour</div>
 												<h2 class="block-header__title">The key to Fine dining</h2>
 											</div>
 											<div class="slide-main-slider__text">Sit tellus lobortis sed senectus vivamus molestie. Condimentum volutpat morbi facilisis quam scelerisque sapien. Et, penatibus aliquam amet tellus </div>
-											<a href="" class="slide-main-slider__button">Explore Menu</a>
+											<a href="" class="slide-main-slider__button button">Explore Menu</a>
 										</div>
 										<div class="slide-main-slider__img">
 											<img src="@img/home/main-slider/01.jpg" alt="Photo">
@@ -31,10 +31,10 @@
 							</div>
 						</div>
 						<nav class="main-slider__menu menu-main-slider">
+							<a href="" class="menu-main-slider__link menu-main-slider__link_current">#Gericht</a>
 							<a href="" class="menu-main-slider__link">#Bar</a>
-							<a href="" class="menu-main-slider__link">#Gericht</a>
 						</nav>
-						<div class="main-slider__scroll">main-slider</div>
+						<button class="main-slider__scroll">Scroll</button>
 					</div>
 				</section>
 			</main>
