--- a/src/home.html
+++ b/src/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru">data-fullscreen
 	@@include('html/_head.htm',{
 	"title":"Главная"
 	})
@@ -7,10 +7,9 @@
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
 			<main class="mainpage">
-				<section class="mainpage__slider main-slider">
+				<section data-fullscreen class="mainpage__slider main-slider">
 					<div class="main-slider__container main-slider__container_wide">
-						<div class="main-slider__container body-main-slider">
-							<div class="body-main-slider__slider swiper">
+						<div class="main-slider__container body-main-slider swiper">
 								<div class="body-main-slider__wrapper swiper-wrapper">
 
 									<div class="body-main-slider__slide swiper-slide slide-main-slider">
@@ -22,13 +21,13 @@
 											<div class="slide-main-slider__text">Sit tellus lobortis sed senectus vivamus molestie. Condimentum volutpat morbi facilisis quam scelerisque sapien. Et, penatibus aliquam amet tellus </div>
 											<a href="" class="slide-main-slider__button button">Explore Menu</a>
 										</div>
-										<div class="slide-main-slider__img">
+										<div class="slide-main-slider__img-ibg">
 											<img src="@img/home/main-slider/01.jpg" alt="Photo">
 										</div>
 									</div>
 
 								</div>
-							</div>
+								<div class="body-main-slider__pagination">01 - 02 - 03</div>
 						</div>
 						<nav class="main-slider__menu menu-main-slider">
 							<a href="" class="menu-main-slider__link menu-main-slider__link_current">#Gericht</a>
