--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,4 @@
-<header class="header">
+<header data-scroll="1" data-scroll-show="1000" class="header">
 	<div class="header__container header__container_wide">
 		<div class="header__column header__column_logo header__column_side">
 			<a href="" class="header__logo">Gerícht</a>
